--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "cce",
-  "private": true,
-  "version": "0.0.0",
+  "name": "moep",
+  "version": "0.0.2",
   "type": "module",
   "files": [
     "dist",
     "index.d.ts"
   ],
-  "main": "./dist/counter.umd.cjs",
   "module": "./dist/counter.js",
   "types": "./index.d.ts",
   "exports": {
     "types": "./index.d.ts",
-    "import": "./dist/counter.js",
-    "require": "./dist/counter.umd.cjs"
+    "import": "./dist/counter.js"
   },
   "scripts": {
     "dev": "vite",
@@ -22,5 +19,9 @@
   "devDependencies": {
     "typescript": "~5.7.3",
     "vite": "^6.1.1"
+  },
+  "dependencies": {
+    "kloen": "^0.10.0",
+    "lit-html": "^3.2.1"
   }
 }
