--- a/package.json
+++ b/package.json
@@ -14,9 +14,17 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "test": "web-test-runner test/**/*.test.{js,html,ts} --coverage --node-resolve"
   },
   "devDependencies": {
+    "@esm-bundle/chai": "4.3.4-fix.0",
+    "@open-wc/testing": "^4.0.0",
+    "@web/dev-server-esbuild": "^1.0.4",
+    "@web/dev-server-legacy": "^2.1.1",
+    "@web/test-runner": "^0.20.0",
+    "@web/test-runner-mocha": "^0.9.0",
+    "lit-element": "^4.1.1",
     "typescript": "~5.7.3",
     "vite": "^6.1.1"
   },
