--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "devDependencies": {
     "@esm-bundle/chai": "4.3.4-fix.0",
     "@open-wc/testing": "^4.0.0",
+    "@types/sinon": "^17.0.4",
     "@web/dev-server-esbuild": "^1.0.4",
     "@web/dev-server-legacy": "^2.1.1",
     "@web/test-runner": "^0.20.0",
     "@web/test-runner-mocha": "^0.9.0",
     "lit-element": "^4.1.1",
+    "sinon": "^19.0.2",
     "typescript": "~5.7.3",
     "vite": "^6.1.1"
   },
