--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "release": "pnpm run build && pnpm version patch && pnpm publish",
     "test": "web-test-runner test/**/*.test.{js,html,ts} --coverage --node-resolve"
   },
   "devDependencies": {
