--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "release": "pnpm run build && pnpm version patch && pnpm publish --no-git-checks",
-    "test": "web-test-runner test/**/*.test.{js,html,ts} --coverage --node-resolve"
+    "test": "web-test-runner test/**/*.test.{js,html,ts}"
   },
   "devDependencies": {
     "@esm-bundle/chai": "4.3.4-fix.0",
